mod: style modules and fixed menu overflows

--- a/src/main.css
+++ b/src/main.css
@@ -124,21 +124,33 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
   font-size: 24px;
   color: #ffffff;
   font-weight: 700; }
-  .logo:hover {
-    color: #ffffff; }
 
 .site-nav {
   position: absolute;
   width: 100%;
+  background-color: #ffffff;
   z-index: 10; }
   .site-nav a {
     position: relative;
     z-index: 9;
     cursor: pointer; }
 
+.nav-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+
 .site-nav {
-  padding-top: 20px;
-  padding-bottom: 20px; }
+    position: fixed;
+    width: 100%;
+    padding-top: 18px;
+    padding-bottom: 18px; }
+   .site-nav .container {
+    max-width: 1550px;
+    padding-left: 5%;
+    padding-right: 5%;}
   .site-nav h1 {
     margin: 0;
     padding: 0;
@@ -205,7 +217,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
         -webkit-box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
         box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
         padding: 20px 0;
-        margin-top: 20px;
+        margin-top: 0px;
         margin-left: 0px;
         background: #ffffff;
         -webkit-transition: 0.2s 0s;
